# Image-Processing-Utility

./: .gitignore  CMakeLists.txt  README.MD  opencv.txt
FiltOption/: CMakeLists.txt
FiltOption/FreqFilt/: CMakeLists.txt
FiltOption/FreqFilt/src/FreqFilt/: freqfilt.cpp  freqfilt.h  freqfilt.ui
FiltOption/HighPassFilt/: CMakeLists.txt
FiltOption/HighPassFilt/src/HighPassFilt/: highpassfilt.cpp  highpassfilt.h  highpassfilt.ui
FiltOption/LowPassFilt/: CMakeLists.txt
FiltOption/LowPassFilt/src/LowPassFilt/: lowpassfilt.cpp  lowpassfilt.h  lowpassfilt.ui
FiltOption/MedFilt/: CMakeLists.txt
FiltOption/MedFilt/src/MedFilt/: medfilt.cpp  medfilt.h  medfilt.ui
FiltOption/SegmFilt/: CMakeLists.txt
FiltOption/SegmFilt/src/SegmFilt/: segmfilt.cpp  segmfilt.h  segmfilt.ui
FiltOption/ThreshFilt/: CMakeLists.txt
FiltOption/ThreshFilt/src/ThreshFilt/: threshfilt.cpp
FiltOption/TreshFilt/: CMakeLists.txt
FiltOption/TreshFilt/src/TreshFilt/: treshfilt.cpp  treshfilt.h  treshfilt.ui
FiltOption/src/FiltOption/: filterswindow.cpp  filterswindow.h  filterswindow.ui
HistOption/: CMakeLists.txt
HistOption/src/HistOption/: histogram.cpp  histogram.h  histogram.ui
ImageAlgorithms/: CMakeLists.txt
ImageProc/FiltOption/: filterswindow.cpp  filterswindow.h  filterswindow.ui
ImageProc/HistOption/: histogram.cpp  histogram.ui
ImageProc/SelectionWindow/: mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
ProjectEx/: CMakeLists.txt  main.cpp
SelectionWindow/: CMakeLists.txt
SelectionWindow/src/SelectionWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
build-ImageProc-Desktop-Release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ImageProc  Makefile  cmake_install.cmake  compile_commands.json
build-ImageProc-Desktop-Release/.cmake/api/v1/reply/: cache-v2-1aa29764ac32979ec44f.json  (+236 more)
build-ImageProc-Desktop-Release/FiltOption/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/FiltOption/FiltOption_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/FiltOption/FiltOption_autogen/4WCEULW2BI/: moc_filterswindow.cpp
build-ImageProc-Desktop-Release/FiltOption/FiltOption_autogen/include/: ui_filterswindow.h
build-ImageProc-Desktop-Release/FiltOption/FreqFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/FiltOption/HighPassFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/FiltOption/LowPassFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/FiltOption/MedFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/FiltOption/MedFilt/MedFilt_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/FiltOption/SegmFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/FiltOption/TreshFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/FiltOption/TreshFilt/TreshFilt_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/HistOption/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/HistOption/HistOption_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/HistOption/HistOption_autogen/W7L4KQ7GUL/: moc_histogram.cpp
build-ImageProc-Desktop-Release/HistOption/HistOption_autogen/include/: ui_histogram.h
build-ImageProc-Desktop-Release/ImageAlgorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ImageProc_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/ImageProc_autogen/3QBRKDYKBV/: moc_mainwindow.cpp
build-ImageProc-Desktop-Release/ImageProc_autogen/6KTI6JJUFA/: moc_histogram.cpp
build-ImageProc-Desktop-Release/ImageProc_autogen/A3SVH7NBGF/: moc_filterswindow.cpp
build-ImageProc-Desktop-Release/ImageProc_autogen/X3O6VQKMRW/: moc_mainwindow.cpp
build-ImageProc-Desktop-Release/ImageProc_autogen/include/: ui_filterswindow.h  ui_histogram.h  ui_mainwindow.h
build-ImageProc-Desktop-Release/ProjectEx/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ImageProc  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/FreqFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/HighPassFilt/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/LowPassFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/MedFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/SegmFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/FiltOption/TreshFilt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/HistOption/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/ProjectEx/ImageAlgorithms/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/ProjectEx/ProjectEx/: CTestTestfile.cmake  ImageProc  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/ProjectEx/SelectionWindow/: CTestTestfile.cmake  Makefile
build-ImageProc-Desktop-Release/ProjectEx/Testing/Temporary/: CTestCostData.txt
build-ImageProc-Desktop-Release/SelectionWindow/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ImageProc-Desktop-Release/SelectionWindow/SelectionWindow_autogen/: mocs_compilation.cpp
build-ImageProc-Desktop-Release/SelectionWindow/SelectionWindow_autogen/4IQRHBKUR6/: moc_mainwindow.cpp
build-ImageProc-Desktop-Release/Testing/: TAG
build-ImageProc-Desktop-Release/Testing/20210914-1718/: Test.xml
build-ImageProc-Desktop-Release/Testing/20210915-1423/: Test.xml
build-ImageProc-Desktop-Release/Testing/20210916-1312/: Test.xml
build-ImageProc-Desktop-Release/Testing/Temporary/: CTestCostData.txt
(+30 files in other folders)
